--- a/static/blog/style.css
+++ b/static/blog/style.css
@@ -3,6 +3,7 @@ body {
     color: black;
     line-height: 1.4;
     font-size: 18px;
+    margin: 0px;
 }
 
 .container {
@@ -13,4 +14,27 @@ body {
 
 h2, h3 {
     color: #3a8bab;
+}
+
+.topbar {
+    background: #79B9D2;
+    color: white;
+    width: 100%;
+    z-index: 9999;
+    padding: 20px 20px;
+    height: 100px;
+
+}
+
+.left {float:left;}
+.right {float:right;}
+
+.topbar ul li {
+    display: inline-block;
+    padding: 10px;
+}
+
+.topbar ul li a {
+    color: white;
+    text-decoration: none;
 }
