--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="{% static 'blog/style.css' %}" />
 
 
+{% include 'blog/navbar.html' %}
 <div class="container">
 
 <h2>{{ object.title }}</h2>
