--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -1,10 +1,10 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'blog/style.css' %}" />
-
-
+<link rel="stylesheet" 
+      type="text/css" 
+      href="{% static 'blog/style.css' %}" />
 {% include 'blog/navbar.html' %}
-<div class="container">
 
+<div class="container">
 <h2>{{ object.title }}</h2>
 <b>{{ object.author }}</b>
 <br>
